.local/etc: Ignore wireshark's config, as it keeps changing
Also stop ignoring changing application config for apps that I only used
for Papiliorama - I no longer work there now.

--- a/.local/etc/.gitignore
+++ b/.local/etc/.gitignore
@@ -1,9 +1,3 @@
-# Papiliorama
-/httpd/
-/KeePass/
-/.mono/
-
-# Others
 /asciinema/
 /dconf/
 /freerdp/
@@ -16,4 +10,5 @@
 /pluma/
 /sakura/
 /Thunar/
+/wireshark/
 /xfce4/
