lighttpd: Simplify CGI config (we only run python)

--- a/.local/etc/lighttpd/conf.d/cgi.conf
+++ b/.local/etc/lighttpd/conf.d/cgi.conf
@@ -1,11 +1,4 @@
 # lighttpd configuration snipped for CGI
 
 server.modules += ( "mod_cgi" )
-cgi.assign = (
-	".cgi" => "/usr/bin/python3",
-	".php" => "/usr/bin/php",
-	".pl" => "/usr/bin/perl",
-	".py" => "/usr/bin/python3",
-	".rb" => "/usr/bin/ruby",
-	".sh" => "/bin/sh"
-)
+cgi.assign = ( ".cgi" => "/usr/bin/python3", ".py" => "/usr/bin/python3" )
