--- a/.local/etc/lighttpd/conf.d/mimetype.conf
+++ b/.local/etc/lighttpd/conf.d/mimetype.conf
@@ -10,6 +10,7 @@ mimetype.assign = (
     ".gif" => "image/gif",
     ".png" => "image/png",
     ".pdf" => "application/pdf",
+    ".sh" => "text/plain",
     ".swf" => "application/x-shockwave-flash",
     "" => "application/octet-stream"
 )
