qutebrowser: Add EPFL people search

--- a/.local/etc/qutebrowser/qutebrowser.conf
+++ b/.local/etc/qutebrowser/qutebrowser.conf
@@ -1049,6 +1049,7 @@ meteo    = http://meteo.search.ch/?plz_ort={}
 yt       = http://www.youtube.com/results?search_query={}
 bc       = http://bandcamp.com/search?q={}
 xkcd     = http://www.google.com/cse?cx=012652707207066138651:zudjtuwe28q&ie=UTF-8&q={}&siteurl=xkcd.com/&ref=&ss=&oq=&gs_l=
+people   = https://search.epfl.ch/psearch.action?request_locale=en&q={}
 
 wp       = http://www.wikipedia.org/search-redirect.php?family=wikipedia&search={}&language=en&go=Go
 wpfr     = https://fr.wikipedia.org/w/index.php?title=Spécial:Recherche&profile=default&fulltext=Search&search={}
