qutebrowser: Map `m` and `M` to launching mpv
Also remove link to Marthe's EPFL people page - that was meant as a
reminder about a year ago.

--- a/.local/etc/qutebrowser/keys.conf
+++ b/.local/etc/qutebrowser/keys.conf
@@ -235,7 +235,7 @@ open -w -- {clipboard}
 open -w -- {primary}
     wP
 
-quickmark-save
+spawn mpv {url}
     m
 
 set-cmd-text -s :quickmark-load
@@ -400,7 +400,7 @@ follow-selected -t
     <ctrl-return>
     <ctrl-enter>
 
-bookmark-add
+hint links spawn mpv {hint-url}
     M
 
 set-cmd-text -s :bookmark-load
