--- a/etc/sh/config
+++ b/etc/sh/config
@@ -83,6 +83,7 @@ vcs_update()
 		echo "$git_status" | grep '^[MADR]' >/dev/null && vcs_state=ready
 		echo "$git_status" | grep '^.[M?ADR]' >/dev/null && vcs_state=dirty
 		echo "$git_status" | grep '^UU' >/dev/null && vcs_state=merge
+		test "$vcs_branch" != 'HEAD (no branch)' || vcs_branch=rebase
 	fi
 	unset git_head
 }
