irssi: Highlight unconditionally
I configured ZNC to only replay the things I've missed, so there is no
need to ignore the playback buffer anymore (for older messages, I'll
just take a look at the ZNC logs).

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -221,7 +221,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "^[A-Za-z0-9.,:;!?|<>{} ]*([Aa]yekat|[Kk]arui)";
+    text = "([Aa]yekat|[Kk]arui)";
     nick = "yes";
     word = "yes";
     regexp = "yes";
