qutebrowser: Fix google news search

--- a/etc/qutebrowser/qutebrowser.conf
+++ b/etc/qutebrowser/qutebrowser.conf
@@ -1043,7 +1043,7 @@ DEFAULT  = ${ddg}
 ddg      = https://duckduckgo.com/?q={}
 google   = https://www.google.com/search?q={}
 img      = https://www.google.com/search?tbm=isch&q={}
-news     = https://news.google.com/search?q={}
+news     = https://www.google.com/search?tbm=nws&q={}
 map      = http://search.epfl.ch/process_web2010?lang=en&as_site_search=&q={}&engine=place
 meteo    = http://meteo.search.ch/?plz_ort={}
 yt       = http://www.youtube.com/results?search_query={}
