--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -3,7 +3,7 @@
 pkgbase='ayekat-dotfiles-deps'
 pkgname=('ayekat-dotfiles-deps' 'ayekat-dotfiles-deps-desktop')
 pkgver=2017.06.08
-pkgrel=1
+pkgrel=2
 arch=('any')
 url='https://github.com/ayekat/dotfiles'
 license=('GPL3')
@@ -12,7 +12,7 @@ package_ayekat-dotfiles-deps() {
   pkgname=ayekat-dotfiles-deps
   pkgdesc="Dependencies for ayekat's dotfiles"
   depends=('coreutils' 'fakeroot' 'grep' 'less' 'pam' 'sed' 'systemd' 'vim'
-           'zsh')
+           'which' 'zsh')
   optdepends=('ayekat-utils-deps: command line utilities'
               'shellcheck: shell syntax check in vim'
               'zsh-syntax-highlighting: syntax highlighting in interactive zsh')
@@ -21,13 +21,18 @@ package_ayekat-dotfiles-deps() {
 package_ayekat-dotfiles-deps-desktop() {
   pkgname=ayekat-dotfiles-deps-desktop
   pkgdesc="Desktop dependencies for ayekat's dotfiles"
-  depends=('ayekat-dotfiles-deps' 'ayekat-utils-deps-desktop'
-           'claws-mail' 'claws-mail-themes' 'cower' 'dmenu' 'dunst' 'eom'
-           'ibus-anthy' 'libnotify' 'mpc' 'mpd' 'mpv' 'ncmpcpp' 'nitrogen'
-           'numix-gtk-theme' 'pidgin' 'pidgin-libnotify' 'qutebrowser'
-           'qwertz-ch-ayekat' 'rxvt-unicode' 'sakura' 'telegram-desktop-bin'
-           'ttf-dejavu' 'ttf-linux-libertine' 'urxvt-perls' 'which' 'wmname'
-           'xclip' 'xorg-server' 'xorg-setxkbmap' 'xorg-xinit' 'xorg-xrdb'
-           'xorg-xset' 'xss-lock' 'xtrlock' 'zathura' 'zathura-pdf-mupdf'
-           'zenity')
+  depends=(alsa-utils mpd mpv ncmpcpp
+           ayekat-dotfiles-deps ayekat-utils-deps-desktop
+           claws-mail claws-mail-themes mutt
+           cower
+           dunst libnotify
+           eom zathura zathura-pdf-mupdf
+           ibus-anthy qwertz-ch-ayekat xorg-setxkbmap
+           irssi pidgin pidgin-libnotify telegram-desktop-bin
+           karuiwm-legacy-ayekat wmname xorg-server xorg-xinit zenity
+           nitrogen numix-gtk-theme xorg-xrdb
+           qutebrowser
+           ttf-dejavu ttf-linux-libertine
+           urxvt-perls
+           xorg-xset xss-lock)
 }
