git: Update XDG_CONFIG_HOME
Not sure if I can put an environment variable there...

--- a/etc/git/config
+++ b/etc/git/config
@@ -7,7 +7,7 @@
 	branch = auto
 [core]
 	editor = vim
-	excludesfile = ~/.config/git/ignore
+	excludesfile = ~/.local/etc/git/ignore
 [commit]
 	verbose = true
 [push]
