--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: ayekat <takeya@bluewin.ch>
 
-pkgbase='ayekat-dotfiles-deps'
-pkgname=('ayekat-dotfiles-deps' 'ayekat-dotfiles-deps-desktop')
+pkgbase=ayekat-dotfiles-deps
+pkgname=(ayekat-dotfiles-deps ayekat-dotfiles-deps-desktop)
 pkgver=2017.06.08
-pkgrel=2
+pkgrel=3
 arch=('any')
 url='https://github.com/ayekat/dotfiles'
 license=('GPL3')
@@ -11,8 +11,8 @@ license=('GPL3')
 package_ayekat-dotfiles-deps() {
   pkgname=ayekat-dotfiles-deps
   pkgdesc="Dependencies for ayekat's dotfiles"
-  depends=('coreutils' 'fakeroot' 'grep' 'less' 'pam' 'sed' 'systemd' 'vim'
-           'which' 'zsh')
+  depends=(coreutils fakeroot grep less pam rxvt-unicode-terminfo sed systemd
+           vim which zsh)
   optdepends=('ayekat-utils-deps: command line utilities'
               'shellcheck: shell syntax check in vim'
               'zsh-syntax-highlighting: syntax highlighting in interactive zsh')
