irssi: Add archlinux-offtopic and manjaro to list of "ignored" channels
"ignored" here means: I don't want to be flooded by messages about
people leaving/entering.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -16,9 +16,11 @@ ignores = (
     channels = (
       "#archlinux",
       "#archlinux-arm",
+      "#archlinux-offtopic",
       "#claws",
       "#debian",
       "#gitlab",
+      "#manjaro",
       "#netfilter",
       "#python",
       "#qemu",
