qutebrowser: Set LIBGL_ALWAYS_SOFTWARE on phobia
phobia is my stationary machine at home running with nouveau, which is
not supported by QtWebEngine.

Determining the host name requires the `hostname` command, which is part
of the `inetutils` package on Arch Linux, so the PKGBUILD has been
updated, too. It may be more elegant to replace host-specific
configuration by a detection of the GPU driver.

--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -31,7 +31,7 @@ package_ayekat-dotfiles-deps-desktop() {
            irssi pidgin pidgin-libnotify telegram-desktop-bin
            karuiwm-legacy-ayekat wmname xorg-server xorg-xinit zenity
            nitrogen numix-gtk-theme xorg-xrdb
-           qutebrowser
+           inetutils qutebrowser
            ttf-dejavu ttf-linux-libertine
            urxvt-perls
            xorg-xset xss-lock)
