--- a/etc/sh/config
+++ b/etc/sh/config
@@ -17,9 +17,9 @@ cmd_exists()
 export GCC_COLORS='error=01;31:warning=33:note=36:caret=01;32:locus=37:quote=32'
 
 # Aliases:
+unalias -a
 alias cp='cp -i'
 alias grep='grep --color=auto'
-alias info='info --vi-keys'
 alias la='ls -A'
 alias lah='ll -A'
 alias laht='ll -At'
