--- a/etc/lighttpd/global.conf
+++ b/etc/lighttpd/global.conf
@@ -12,6 +12,6 @@ server.errorlog = "/var/log/lighttpd/error.log"
 
 # Reverse proxy:
 server.modules += ( "mod_proxy" )
-#$HTTP["host"] =~ "ixh|localhost" {
+#$HTTP["host"] =~ "chirschi|localhost" {
 	proxy.server = ( "" => ( "" => ( "host" => "127.0.0.1", "port" => 8080 ) ) )
 #}
