etc: Ignore 'Foxit Software' and 'QtProject.conf'
TCP/IP requires me to fill in HTML forms in PDF documents, so I require
an obscure PDF reader that supports that.

--- a/etc/.gitignore
+++ b/etc/.gitignore
@@ -1,17 +1,24 @@
+# EPFL
+/Foxit Software/
+/QtProject.conf
+
+# Papiliorama
+/KeePass/
+/freerdp/
+/.mono/
+
+# General
 /asciinema/
 /ayepaste/
 /darktable/
 /dconf/
-/freerdp/
 /htop/
 /ibus/
 /inkscape/
-/KeePass/
 /klavaro/
 /libreoffice/
 /mate/
 /mutt/
-/.mono/
 /nitrogen/
 /openvpn/
 /pluma/
