etc/karuiwm: Update variable names

--- a/etc/karuiwm/config.ini
+++ b/etc/karuiwm/config.ini
@@ -1,8 +1,8 @@
 [General]
 Modules = alsa masterstack scratchpad
-BorderWidth = 1
-BorderColour = 0x444444
-BorderColourFocused = 0xAFD700
+ViewBorderWidth = 1
+ViewBorderColour = 0x444444
+ViewBorderColourFocused = 0xAFD700
 MetaKey = Mod4
 
 [Keys]
