etc/sh: Use non-bold prompt for displaying git state

--- a/etc/sh/config
+++ b/etc/sh/config
@@ -45,7 +45,7 @@ pc_git_status_cln="$(printf '\033[32m')"
 pc_git_remote_ahd="$(printf '\033[0;36m')"
 pc_git_remote_bhd="$(printf '\033[0;34m')"
 pc_git_remote_div="$(printf '\033[0;35m')"
-pc_git_state="$(printf '\033[0;1m')"
+pc_git_state="$(printf '\033[0m')"
 pc_git_bracket="$(printf '\033[0;34m')"
 pc_host=$(printf "\033[35m")
 pc_pwd=$(printf "\033[34m")
