--- a/etc/sh/config
+++ b/etc/sh/config
@@ -38,11 +38,9 @@ export LESS_TERMCAP_mb LESS_TERMCAP_md LESS_TERMCAP_me LESS_TERMCAP_se \
 unalias -a
 alias cp='cp -i'
 alias grep='grep --color=auto'
-alias la='ls -A'
-alias lah='ll -A'
-alias laht='ll -At'
 alias ll='ls -lh --time-style=long-iso'
-alias ls='ls --color=auto'
+alias ls='ls -A --color=auto'
+alias lt='ll -t'
 alias mv='mv -i'
 alias todo='grep -n -R "TODO\|FIXME\|XXX" .'
 alias view='vim -R'
