--- a/etc/sh/config
+++ b/etc/sh/config
@@ -2,16 +2,14 @@
 # Written by ayekat on a warm summer day in 2013.
 
 # Helper:
-cmds_exist()
+have()
 {
 	for c in "$@"; do
 		which "$c" >/dev/null 2>&1 || return 1
 	done
 }
 
-# }}}
 # ------------------------------------------------------------------------------
-# LOOK & FEEL {{{
 
 # Colours for gcc:
 export GCC_COLORS='error=01;31:warning=33:note=36:caret=01;32:locus=37:quote=32'
@@ -50,7 +48,6 @@ if [ -n "$SSH_CONNECTION" ]; then
 	alias rm='rm -i'
 fi
 
-# }}}
 # ------------------------------------------------------------------------------
 # PROMPT {{{
 
@@ -82,7 +79,7 @@ git_update()
 	git_detached=''
 
 	# Git:
-	cmds_exist git || return 1
+	have git || return 1
 	git_path="$(git -C "$1" rev-parse --show-toplevel 2>/dev/null)" || return 1
 	git_dir="$(git -C "$git_path" rev-parse --absolute-git-dir 2>/dev/null)" || return 1
 
