etc/karuiwm: Only load the `masterstack` module
The others do not exist yet.

--- a/etc/karuiwm/config.ini
+++ b/etc/karuiwm/config.ini
@@ -1,5 +1,5 @@
 [General]
-Modules = alsa masterstack scratchpad
+Modules = masterstack
 ViewBorderWidth = 1
 ViewBorderColour = 0x444444
 ViewBorderColourFocused = 0xAFD700
