etc/irssi: Ignore noise in #archlinux-security

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -17,6 +17,7 @@ ignores = (
       "#archlinux",
       "#archlinux-arm",
       "#archlinux-offtopic",
+      "#archlinux-security",
       "#claws",
       "#debian",
       "#gitlab",
