etc/irssi: We're in zuepfe.net now!
It's the same server, but `ayekat.ch` will only be used for my personal
website now, not for infrastructure stuff.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -2,7 +2,7 @@
 
 servers = (
   {
-    address = "znc.ayekat.ch";
+    address = "znc.zuepfe.net";
     port = "9876";
     password = "ayekat:ZNC_PASSWORD";
     use_ssl = "yes";
