etc/karuiwm: Update upstream URL in PKGBUILD

--- a/etc/karuiwm/PKGBUILD
+++ b/etc/karuiwm/PKGBUILD
@@ -11,7 +11,7 @@ pkgdesc="Dynamically tiling window manager for X11 (legacy version, ayekat's con
 pkgver=r204.55f3a56
 pkgrel=2
 arch=(x86_64)
-url='https://gitlab.com/ayekat/karuiwm'
+url='https://gitlab.com/ayekat/karuiwm/tree/legacy'
 license=(MIT)
 depends=(libx11 libxinerama)
 makedepends=(inetutils)
