etc/(z)sh: Print username if not "default"
I'm starting to work in a project that requires some rather invasive
setups in my home directory, and I think it's now a good moment to start
splitting up workspaces into multiple users.

--- a/etc/sh/config
+++ b/etc/sh/config
@@ -63,6 +63,7 @@ pc_git_remote_bhd="$(printf '\033[0;34m')"
 pc_git_remote_div="$(printf '\033[0;35m')"
 pc_git_state="$(printf '\033[0m')"
 pc_git_bracket="$(printf '\033[0;34m')"
+pc_user=$(printf "\033[36m")
 pc_host=$(printf "\033[35m")
 pc_pwd=$(printf "\033[34m")
 pc_prompt=$(printf "\033[1;31m")
