etc/irssi: Specify channel for noise ignore list
If either of them happens to show up in another channel I'm frequenting
(where I have not enabled the ignore (OK, that probably won't happen)),
I'm very well interested in seeing them.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -27,6 +27,7 @@ ignores = (
       "#python",
       "#qemu",
       "#qutebrowser",
+      "#qutebrowser-offtopic",
       "#raspbian",
       "#systemd",
       "#ubuntu",
@@ -37,12 +38,12 @@ ignores = (
     );
     level = "JOINS PARTS QUITS NICKS";
   },
-  { mask = "doek";     level = "JOINS PARTS QUITS"; },
-  { mask = "leolepro"; level = "JOINS PARTS QUITS"; },
-  { mask = "Lowlya";   level = "JOINS PARTS QUITS"; },
-  { mask = "texom512"; level = "JOINS PARTS QUITS"; },
-  { mask = "Yumia";    level = "JOINS PARTS QUITS"; },
-  { mask = "zephyz";   level = "JOINS PARTS QUITS"; },
+  { mask = "doek";     level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "leolepro"; level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "Lowlya";   level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "texom512"; level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "Yumia";    level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "zephyz";   level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
 );
 
 aliases = {
